# Hydra-HPC-Launcher

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  launcher.py  main.py  pyproject.toml
hydra_plugins/hpc_submission_launcher/: launcher.py
hydra_plugins/print_command_launcher/: launcher.py
src/hydra_hpc_launcher/: __init__.py  registry.py
src/hydra_hpc_launcher/config/: __init__.py  configuration.py  handler.py
src/hydra_hpc_launcher/launcher/: __init__.py  launcher.py  types.py
